# ICP_final_project_2026

./: AudioManager.cpp  AudioManager.hpp  CMakeLists.txt  CMakePresets.json  Config.hpp  Mesh.hpp  Model.hpp  OBJloader.cpp  OBJloader.hpp  README.md  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  app.cpp  app.hpp  assets.hpp  callbacks.cpp  callbacks.hpp  config.json  fps_meter.hpp  getinfo.cpp  getinfo.hpp  gl_err_callback.cpp  gl_err_callback.h  imgui.ini  main.cpp
shaders/: directional.vert  model.frag  model.vert  point.vert  point_or_directional.frag
